# arrs-rss-converter

./: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
