[package]
name = "arrs-rss-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
config = "0.13"
dotenvy = "0.15"
quick-xml = { version = "0.31", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
